--- a/gym/templates/html/login.html
+++ b/gym/templates/html/login.html
@@ -21,19 +21,19 @@
     {% comment %} <img src="{% static 'images/b-log.jpg'%}"> {% endcomment %}
         <div class="login-container">
             <div class="login-box">
-                <h2>Login </h2>
+                <h2>تسجيل الدخول </h2>
                 <div class="input-container">
                     <form  method="post" action="{% url 'log_in' %}">
                         {%csrf_token%}
                     <i class="icon fas fa-user"></i>
-                    <input type="text" placeholder="Username" name="username" Required> 
+                    <input type="text" placeholder="اسم المشرف" name="username" Required> 
                 </div>
                 <div class="input-container">
                     <i class="icon fas fa-lock"></i>
-                    <input type="password" placeholder="Password" name="password">
+                    <input type="password" placeholder="كلمة المرور" name="password">
                
                 </div>
-                <button type="submit" onclick="login()" >Login</button>
+                <button type="submit" onclick="login()" >دخول</button>
             </div>
         </form>
         </div>
