--- a/gym/templates/html/List_admin.html
+++ b/gym/templates/html/List_admin.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container mt-4">
-        <h1 class="text-center mb-4">Admin Table</h1>
+        <h1 class="text-center mb-4">مجموعة المشرفين</h1>
         <div class="input-group mb-3">
             <input type="text" id="searchInput" class="form-control" placeholder="Search...">
         </div>
@@ -20,9 +20,9 @@
         {% comment %} <table class="table table-bordered table-striped"> {% endcomment %}
           <thead>
               <tr>
-                 <th>Admin ID</th>
-                  <th>Admin name</th>
-                  <th>Action</th>
+                <th>رقم المشرف </th>
+                  <th>اسم المشرف</th>
+                  <th>الإجراء</th>
               </tr>
           </thead>
           <tbody>
