--- a/gym/templates/html/delet_user.html
+++ b/gym/templates/html/delet_user.html
@@ -34,24 +34,24 @@
                     <div class="icon-box">
                         <i class="material-icons">&#xE5CD;</i>
                     </div>
-                    <h4 class="modal-title w-100">Are you sure?</h4>
+                    <h4 class="modal-title w-100">هل أنت متأكد؟</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 </div>
                 <!-- Modal body -->
                 <div class="modal-body">
-                    <p>Do you really want to delete these subscriber "{{subscriber.name}}"</p>
+                    <p>هل تريد حقا حذف هذا المشترك "{{subscriber.name}}"</p>
                 </div>
                 <!-- Modal footer -->
                 <div class="modal-footer justify-content-center">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal" href="{% url 'home' %}">Cancel</button>
-                    <button type="button" class="btn btn-danger" data-dismiss="modal" onclick="deleteSubscriber({{ subscriber.id }})">Delete</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" href="{% url 'home' %}">إلغاء</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal" onclick="deleteSubscriber({{ subscriber.id }})">حذف</button>
                 </div>
             </div>
         </div>
     </div>
 </form>
         <!-- ... -->
-<button type="button" class="btn btn-danger" data-dismiss="modal" onclick="deleteSubscriber({{ subscriber.id }})">Delete</button>
+<button type="button" class="btn btn-danger" data-dismiss="modal" onclick="deleteSubscriber({{ subscriber.id }})">حذف</button>
 <!-- ... -->
 
 <script>
